force-app/main/default/objects/Project__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Skill__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Certifications</valueSetName>
    </valueSet>
</CustomField>