force-app/main/default/objects/Project__c/validationRules/CertificationRequiredValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CertificationRequiredValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Skill__c ,&apos;SFDC&apos;) &amp;&amp; ISBLANK(TEXT(Certification__c ))||
ISPICKVAL( Skill__c ,&apos;JAVA&apos;) &amp;&amp; ISBLANK(TEXT(Certification__c ))||
ISPICKVAL( Skill__c ,&apos;CLOUD&apos;) &amp;&amp; ISBLANK(TEXT(Certification__c))||
ISPICKVAL( Skill__c ,&apos;Testing&apos;) &amp;&amp; ISBLANK(TEXT(Certification__c))</errorConditionFormula>
    <errorMessage>Certification is required for selected skill.</errorMessage>
</ValidationRule>