force-app/main/default/objects/Project__c/validationRules/start_Date_should_be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>start_Date_should_be_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &lt;= today()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>start_Date_should_be_in_Future date</errorMessage>
</ValidationRule>